--- a/Jirono/contact.html
+++ b/Jirono/contact.html
@@ -64,7 +64,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                     <ul class="header-buttons">
@@ -72,25 +72,25 @@
                         <li><a class="btn btn-outline-dark" href="#" id="upDiffer">SIGN UP</a></li>
                     </ul>
                 </div>
-    
             </div>
 
         </nav>
         <!-- NAV END -->
     </header>
     <main>
+        <!-- Parallax start -->
         <section id="Parallax" class="start">
             <div class="ParallaxContent">
                 <div class="about-caption">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
-                                <h1>Features</h1>
+                                <h1>Contact</h1>
                             </div>
                             <div class="col-lg-3 d-flex justify-content-center align-items-center">
                                 <a href="index.html">Home</a>
                                 <i class="fas fa-angle-right"></i>
-                                <p class="mb-0">Features</p>
+                                <p class="mb-0">Contact</p>
                             </div>
                         </div>
                     </div>
@@ -98,177 +98,125 @@
                 </div>
             </div>
         </section>
+        <!-- Parallax end -->
 
-        <!-- Cloud cards start -->
-        <section id="toCloud">
+        <section id="map">
             <div class="container">
                 <div class="row mt-5">
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex">
-                                <div class="icon-image">
-                                    <img src="images/1.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex">
-                                <div class="icon-image">
-                                    <img src="images/2.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex">
-                                <div class="icon-image">
-                                    <img src="images/3.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex">
-                                <div class="icon-image">
-                                    <img src="images/4.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex">
-                                <div class="icon-image">
-                                    <img src="images/5.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <a href="#">
-                            <div class="link d-flex ">
-                                <div class="icon-image">
-                                    <img src="images/6.png">
-                                </div>
-                                <div class="link-text">
-                                    <h5>Expanded image diff support</h5>
-                                    <p>Sed a arcu a diam lobortis males uada eget in orci. Donec non dignissim <span
-                                            class="d-block"> lectus,
-                                            aliquet.</span></p>
-                                </div>
-                            </div>
-                        </a>
+                    <div class="col-lg-12">
+                        <div class="mapcontainer">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387193.3059669857!2d-74.25986773739224!3d40.697149413874705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1614184105801!5m2!1sen!2s"
+                                width="1110" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                            </iframe>
+                           
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Cloud cards end  -->
+            <div class="contact-information">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 col-md-12 col-sm-12 mt-5">
+                            <div class="card-info">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <div class="information-item d-flex flex-row">
+                                            <i class="fas fa-location-arrow"></i>
+                                            <p class="mb-0">
+                                                455 West Orchard Street
+                                                Kings Mountain, NC 28086</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="information-item  d-flex flex-row">
+                                            <i class="fas fa-phone-alt"></i>
+                                            <p class="mb-0">
+                                                (272) 211-7370
+                                                <br>
+                                                (524) 386-5730
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="information-item">
+                                            <p class="mails"><i class="fas fa-envelope"></i>
+                                                info@yourbrand.com</p>
 
-        <!-- Features description start  -->
-        <section id="features">
+                                            <p class="mails"><i class="fas fa-envelope"></i>
+                                                support@yourbrand.com</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-lg-12">
+                                        <div class="icons">
+                                            <ul>
+                                                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                                                <li><a href=""><i class="fab fa-google-plus-square"></i></a></li>
+                                                <li><a href="#"><i class="fab fa-github-square"></i></a>
+                                                </li>
+
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <section id="getIntouch">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="features-caption">
-                            <div class="text">
-                                <h2>Cloud Services</h2>
-                                <p>Phasellus vitae velit sit amet diam semper commodo quis quis <span
-                                        class="d-block">libero.
-                                        Morbi consequat arcu
-                                        augue, molestie faucibus metus </span>ullamcorper vel.</p>
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="active2 designList btn active"><i
-                                        class="fas fa-angle-right"></i><span>Near
-                                        Cloud</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Office
-                                        Cloud</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Backup
-                                        Systems</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>hybrid
-                                        Cloud</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>API
-                                        CLoud</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>SDK
-                                        Cloud</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Web
-                                        Services</span></a>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Cloud
-                                        Hosting</span></a>
-                            </div>
+                    <div class="col-lg-4">
+                        <div class="bottom-info">
+                            <h5>Get in touch</h5>
+                            <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                Etiam tempus magna vel turpis pharetra dictum.</p>
+                            <p>Sed blandit tempus purus, sed sodales leo rutrum vel. Nam vulputate ipsum ac est congue,
+                                eget commodo magna lobortis.</p>
                         </div>
                     </div>
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-5">
-                        <div
-                            class="features-image d-flex justify-content-center wow animate__animated animate__fadeInLeft ">
-                            <img src="images/dark-1.png" class="img-fluid" alt="">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <input class="form-info" type="text" placeholder="Name, surname">
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <input class="form-info" type="text" placeholder="E-Mail">
+                                </div>
+                                <div class="col-lg-12">
+                                    <textarea placeholder="Your message"></textarea>
+                                </div>
+                                <div class="col-lg-12">
+                                    <a href="#" class="btn send">SEND</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-         <!-- Features description end  -->
     </main>
+
+
+
     <footer>
+        <!-- Footer start -->
         <div class="container">
-            <!-- Footer info  -->
+
             <div class="row">
+                <!-- Footer info start -->
                 <div class="col-lg-5 col-md-12 col-sm-12">
                     <img src="images/logo-white.png" alt="">
                     <div class="caption mt-3">
@@ -276,8 +224,10 @@
                         ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
                     </div>
                 </div>
+                <!-- Footer info end  -->
+
                 <!-- Footer navigation start -->
-                <div class="col-lg-2 col-md-4 col-sm-6 unset">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Helpful links</h5>
                     <ul>
                         <li> <i class="fas fa-angle-right"></i><a href="#"> About us</a></li>
@@ -287,20 +237,19 @@
 
                     </ul>
                 </div>
-                <div class="col-lg-2 col-md-4 col-sm-6 unset">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Support</h5>
                     <ul>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Privacy Policy</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Terms of Use</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Support Center</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Contact</a></li>
-
                     </ul>
                 </div>
                 <!-- Footer navigation end -->
 
-                <!-- Footer contact information -->
-                <div class="col-lg-3 col-md-4 col-sm-12">
+                <!-- Footer contact information start -->
+                <div class="col-lg-3 col-md-4 col-sm-12  mt-3">
                     <h5>Contact Us</h5>
                     <div class="info">
                         <p>455 West Orchard Street</p>
@@ -317,8 +266,8 @@
                             <li><i class="fab fa-github-square"></i></li>
                         </ul>
                     </div>
-
                 </div>
+                <!-- Footer contact information end -->
             </div>
             <div class="row mt-3">
                 <div class="col-lg-12">
@@ -326,7 +275,11 @@
                 </div>
             </div>
         </div>
+        <!-- Footer end -->
     </footer>
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
