--- a/Jirono/blog.html
+++ b/Jirono/blog.html
@@ -29,7 +29,7 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"> <i class="fas fa-bars"></i></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="header-buttons">
@@ -70,6 +70,7 @@
                         <li><a class="btn btn-outline-dark" href="#" id="upDiffer">SIGN UP</a></li>
                     </ul>
                 </div>
+              
             </div>
 
         </nav>
